[package]
name = "ctm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.11.1"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-rustls = "0.26.1"
uuid = { version = "1.11.0", features = ["v7"] }
